--- a/confs/uwsgi.ini
+++ b/confs/uwsgi.ini
@@ -1,13 +1,16 @@
 [uwsgi]
-chdir=/var/www/answer_planet
+projectname = answer_planet
+base=/var/www/answer_planet
+chdir=%(base)
 module=answer_planet.wsgi:application
-home=/var/www/answer_planet/.venv
-master=True
+home=%(base)/.venv
+master=true
 processes=10
 #socket=/var/www/answer_planet/answer_planet.sock
-socket=127.0.0.1:8000
+socket=127.0.0.1:8001
 pidfile=/tmp/project-master.pid
-vacuum=True
+vacuum=true
 max-requests=5000
-daemonize=/tmp/answer_planet.log
-logger=file:/tmp/uwsgi.log
+env=DJANGO_SETTINGS_MODULE=%(projectname).prod_settings
+pythonpath=%(base)
+logto=/tmp/uwsgi.log
